Fix caption alignment when used with bootstrap

--- a/css/CalendarMonth.scss
+++ b/css/CalendarMonth.scss
@@ -15,6 +15,9 @@
   table {
     border-collapse: collapse;
     border-spacing: 0;
+    caption: {
+      caption-side: initial;
+    }
   }
 
   -moz-user-select: none;
@@ -39,6 +42,7 @@
   text-align: center;
   // necessary to not hide borders in FF
   margin-bottom: 2px;
+  caption-side: initial;
 }
 
 .CalendarMonth--horizontal .CalendarMonth__caption,
